--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -1,3 +1,26 @@
 .body {
+  max-width: 880px;
+  margin: 0 auto;
+  padding: 0 200px;
   background-color: #000000;
+  color: #fff;
+  font-family: "Inter", Arial, sans-serif;
+}
+
+@media (max-width:1024px) {
+  .body {
+    padding: 0 100px;
+  }
+}
+
+@media (max-width:768px) {
+  .body {
+    padding: 0 50px;
+  }
+}
+
+@media (max-width:540px) {
+  .body {
+    padding: 0;
+  }
 }
