--- a/pages/index.css
+++ b/pages/index.css
@@ -9,3 +9,6 @@
 @import url('../blocks/header/header.css');
 @import url('../blocks/header/__logo/header__logo.css');
 
+/***  PROFILE  ***/
+@import url('../blocks/profile/profile.css');
+
