--- a/pages/index.css
+++ b/pages/index.css
@@ -13,5 +13,6 @@
 @import url('../blocks/profile/profile.css');
 @import url('../blocks/profile/__image/profile__image.css');
 @import url('../blocks/profile/__info/profile__info.css');
+@import url('../blocks/profile/__name/profile__name.css');
 
 
