--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -8,5 +8,8 @@
     flex-direction: column;
     align-items: center;
     padding: 38.25px 0 36px;
+    max-width: 282px;
+    margin: 0 auto;
+    justify-content: center;
   }
 }
