--- a/pages/index.css
+++ b/pages/index.css
@@ -22,5 +22,9 @@
 /***  CARDS  ***/
 @import url('../blocks/cards/cards.css');
 @import url('../blocks/cards/__item/cards__item.css');
+@import url('../blocks/cards/__image/cards__image.css');
+@import url('../blocks/cards/__name/cards__name.css');
+@import url('../blocks/cards/__description/cards__description.css');
+@import url('../blocks/cards/__like/cards__like.css');
 
 
