--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,11 @@
 .footer {
   margin: 0;
-  padding: 67px 0 60px;
+  padding: 67px 0 60px 0;
   color: #545454;
+}
+
+@media (max-width:540px) {
+  .footer {
+    padding: 48px 19px 36px 19px;
+  }
 }
