--- a/pages/index.css
+++ b/pages/index.css
@@ -27,4 +27,7 @@
 @import url('../blocks/cards/__description/cards__description.css');
 @import url('../blocks/cards/__like/cards__like.css');
 
+/***  FOOTER  ***/
+@import url('../blocks/footer/footer.css');
+
 
