--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,6 +1,10 @@
 .popup {
-display: flex;
-visibility: hidden;
-transition: visibility .5s, ease-in-out;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  justify-content: center;
+  visibility: hidden;
+  transition: visibility .5s, ease-in-out;
+  position: fixed;
 
 }
