--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -4,6 +4,7 @@
   background: #FFF;
   box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
   padding: 34px 36px 37px;
+  position: relative;
 }
 
 @media (max-width:540px) {
