--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,10 +1,17 @@
 .popup__input {
   display: block;
-  width: 100%;
+  width: 358px;
+  border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.8);
   font-family: Inter;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 1.2;
+  margin-left: 36px;
+  padding-bottom: 13px;
+}
+
+.popup__input:nth-child(2) {
+  padding-top: 30px;
 }
