--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,9 +1,10 @@
-.popup__box {
+.popup__container {
   width: 430px;
   border-radius: 10px;
   background: #FFF;
   box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
-  padding: 34px 36px 37px;
+  margin: 0;
+  padding: 0;
   position: relative;
 }
 
