--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,9 +1,16 @@
 .popup {
   display: flex;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   justify-content: center;
+  align-items: center;
   visibility: hidden;
   transition: visibility .5s, ease-in-out;
   position: fixed;
+ top:0;
+ right: 0;
+ left: 0;
+ bottom:0;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.5);
 }
