--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header {
   margin: 0;
-  padding: 119px 0 0 0;
+  padding: 0;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   position: relative;
 }
