--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -10,3 +10,15 @@
   cursor: pointer;
   border: none;
 }
+
+.popup__close-button:hover {
+  opacity: .6;
+}
+
+@media (max-width:540px) {
+  .popup__close-button {
+    background-size: 20px 20px;
+    top: -35px;
+    right: -11px;
+  }
+}
