--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -3,13 +3,14 @@
   border-radius: 10px;
   background: #FFF;
   box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
-  margin: 0;
-  padding: 0;
+  margin: 0 auto;
+  padding: 0 36px 0;
   position: relative;
 }
 
 @media (max-width:540px) {
   .popup__container {
     width: 282px;
+    padding: 0;
   }
 }
