--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,14 +1,13 @@
 .popup__input {
   display: block;
-  width: 358px;
+  width: 100%;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.8);
-  font-family: Inter;
+  font-family: 'Inter', 'Arial', 'sans-serif';
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 1.2;
-  margin-left: 36px;
   padding: 0 0 13px 0;
 }
 
