--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -1,9 +1,8 @@
 .popup__submit {
   display: block;
-  width: 358px;
+  width: 100%;
   height: 50px;
   margin-top: 57px;
-  margin-left: 36px;
   margin-bottom: 37px;
   color: #FFF;
   background-color: #000;
