--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -6,18 +6,25 @@
   margin-bottom: 37px;
   color: #FFF;
   background-color: #000;
-
-  font-family: Inter;
+  border-radius: 2px;
+  font-family: 'Inter','Arial', 'sans-serif';
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 1.22;
   text-align: center;
+  border: none;
+  cursor: pointer;
+}
+
+.popup__submit:hover {
+  opacity: .8;
 }
 
 @media (max-width:540px) {
   .popup__submit {
     width: 238px;
     margin-left: 22px;
+    font-size: 14px;
   }
 }
