--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,8 +1,16 @@
 .popup__title {
-  margin: 0;
-  padding: 34px 36px 54px;
+  margin: 0 auto;
+  padding-bottom: 50px;
   font-size: 24px;
   color: #000;
-  font-family: Inter;
+  font-family: 'Inter','Arial','sans-serif';
   font-weight: 900;
+}
+
+@media (max-width:540px) {
+  .popup__title {
+    width: 238px;
+    padding-bottom: 75px;
+    font-size: 18px;
+  }
 }
