--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -3,7 +3,7 @@
   padding: 0;
   min-width: 150px;
   height: 50px;
-  border: 1px solid #fff;
+  border: 2px solid #fff;
   box-sizing: border-box;
   background-image: url(../../../images/plus.svg);
   background-size: 22px 22px;
@@ -11,14 +11,16 @@
   background-repeat: no-repeat;
   cursor: pointer;
   background-color: #000000;
+  border-radius: 2px;
 }
 
 .profile__add-button:hover {
   opacity: 0.6;
 }
 
-@media (max-width:768px) {
+@media (max-width:540px) {
   .profile__add-button {
     width: 282px;
+    background-size: 16px 16px;
   }
 }
