--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -5,8 +5,15 @@
   margin: 0;
   padding: 8px 0 0 29px;
   color: #fff;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 336px;
 }
 
-.profile__edit-button:hover {
-  opacity: 0.6;
+@media (max-width:540px) {
+  .profile__job {
+    max-width: 282px;
+    font-size: 14px;
+  }
 }
