--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,6 @@
 /***  VENDOR  ***/
 @import url('../vendor/normalize.css');
-@import url('../vendor/font/fonts.css');
+@import url('../vendor/fonts/fonts.css');
 
 /***  BODY  ***/
 @import url('../blocks/body/body.css');
