--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -15,12 +15,13 @@
   opacity: 0.6;
 }
 
-@media (max-width:540px) {
+@media (max-width:770px) {
   .profile__edit-button {
     height: 18px;
     width: 18px;
     background-size: 7.5px 7.5px;
-    left: 8px;
-    top: 8.25px;
+    right: -30px;
+    top: -6.75px;
+    position: absolute;
   }
 }
