--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,5 +1,5 @@
 .popup__container {
-  width: 430px;
+  width: 358px; /* ширина с учетом паддингов */
   border-radius: 10px;
   background: #FFF;
   box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15);
@@ -14,3 +14,4 @@
     padding: 25px 0 0;
   }
 }
+
