--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -8,12 +8,14 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  width: 336px;
+  max-width: 336px;
+  width: 100%;
 }
 
 @media (max-width:540px) {
   .profile__job {
     max-width: 282px;
     font-size: 14px;
+    padding-left: 19px;
   }
 }
