--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,24 +1,11 @@
-/* .cards {
-  margin: 0;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 282px);
-  color: #000;
-  gap: 20px 17px;
-  justify-content: center;
-} */
-
 .cards {
-  margin: 0;
   display: grid;
+  align-content: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
   grid-template-columns: repeat(auto-fit, 282px);
   color: #000;
   gap: 20px 17px;
   border-radius: 10px;
-}
-
-@media (max-width:1279px) {
-  .cards {
-    align-content: center;
-    justify-content: center;
-  }
 }
