--- a/pages/index.css
+++ b/pages/index.css
@@ -29,6 +29,7 @@
 @import url('../blocks/card/__description/card__description.css');
 @import url('../blocks/card/__name/card__name.css');
 @import url('../blocks/card/__like/card__like.css');
+@import url('../blocks/card/__like/_active/card__like_active.css');
 
 /***  FOOTER  ***/
 @import url('../blocks/footer/footer.css');
