--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   visibility: hidden;
-  transition: visibility .5s, ease-in-out;
+  transition: visibility 0s, opacity 0.3s linear;
   position: fixed;
  top:0;
  right: 0;
