--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   visibility: hidden;
+  opacity: 0;
   transition: visibility 0s, opacity 0.3s linear;
   position: fixed;
  top:0;
