--- a/pages/index.css
+++ b/pages/index.css
@@ -48,5 +48,6 @@
 @import url('../blocks/popup/_view/popup_view.css');
 @import url('../blocks/popup/__container/_view/popup__container_view.css');
 @import url('../blocks/popup/__view-image/popup__view-image.css');
+@import url('../blocks/popup/__input/_type/_error/popup_input_type_error.css');
 
 
