--- a/blocks/popup/__form-container/popup__form-container.css
+++ b/blocks/popup/__form-container/popup__form-container.css
@@ -1,11 +1,15 @@
 .popup__form-container {
-
+  margin-bottom: 25px;
   width: 358px;
 }
 
 @media (max-width:540px) {
-  .popup__input {
+  .popup__form-container {
+    margin-bottom: 15px;
     width: 238px;
+  }
 
+  .popup__form-container:nth-child(3) {
+    margin-bottom: 20px;
   }
 }
