--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -2,8 +2,8 @@
   display: block;
   width: 100%;
   height: 50px;
-  margin-top: 57px;
-  margin-bottom: 37px;
+  /* margin-top: 57px;
+  margin-bottom: 37px; */
   color: #FFF;
   background-color: #000;
   border-radius: 2px;
@@ -15,6 +15,8 @@
   text-align: center;
   border: none;
   cursor: pointer;
+  margin: 0;
+  padding: 0;
 }
 
 .popup__submit:hover {
@@ -24,7 +26,7 @@
 @media (max-width:540px) {
   .popup__submit {
     width: 238px;
-    margin-left: 22px;
+    /* margin-left: 22px; */
     font-size: 14px;
   }
 }
