--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,6 +1,6 @@
 .popup__title {
-  margin: 0 auto;
-  padding-bottom: 50px;
+  margin: 0;
+  padding: 0 0 50px 0;
   font-size: 24px;
   color: #000;
   font-family: 'Inter','Arial','sans-serif';
