fix  size error

--- a/blocks/popup/__input-error/_active/popup__input-error_active.css
+++ b/blocks/popup/__input-error/_active/popup__input-error_active.css
@@ -8,6 +8,8 @@
     font-family: 'Inter', 'Arial', 'sans-serif';
     max-width: fit-content;
     width: 358px;
+    height: 36px;
+    display: block;
   }
 
   @media (max-width:540px) {
