--- a/pages/index.css
+++ b/pages/index.css
@@ -52,6 +52,7 @@
 @import url('../blocks/popup/_view/popup_view.css');
 @import url('../blocks/popup/__container/_view/popup__container_view.css');
 @import url('../blocks/popup/__view-image/popup__view-image.css');
+@import url('../blocks/popup/__input-error/popup__input-error.css');
 
 
 
